--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1804,7 +1804,7 @@
           }    
      }  
 }     
-@media screen and (min-width: 426px) and (max-width:440px){
+@media screen and (min-width: 427px) and (max-width:440px){
      .kasa-home {
           @include pageLengthdesktop();
           margin-bottom: 5325px;
@@ -1884,7 +1884,7 @@
      }
 }
 
-@media screen and (min-width: 416px) and (max-width:425px){
+@media screen and (min-width: 416px) and (max-width:426px){
      .kasa-home {
           @include pageLengthmobile();
           width: 100%;
@@ -2056,7 +2056,7 @@
           }
      }       
 }
-@media screen and (min-width: 376px) and (max-width:400px){
+@media screen and (min-width: 301px) and (max-width:400px){
      .kasa-home {
           @include pageLengthmobile();
           width: 100%;
@@ -2140,9 +2140,101 @@
                     
                }
           }
-     }       
+     }          
+}     
+@media screen and (min-width: 375px) and (max-width:300px){
+     .kasa-home {
+          @include pageLengthmobile();
+          width: 100%;
+          margin-bottom: 4800px;
+   
+          &_body {
+     
+               position: absolute;
+               width: 336px;
+               width: 90%;
+               //height: 938px;
+               height:805px;
+               left: 20px;
+               left: 6%;
+               top: 83px;
+               
+               .kasa-home-body_section1 { 
+                    position: absolute;
+                    max-width: 335px;
+                   width: 100%;
+                    height: 111px;
+                    //left: 20px;
+                    //top: 83px;
+                    border-radius: 10px;
+                    h1{
+                         position: absolute;
+                         left: 5.6%;
+                         right: 32.53%;
+                         top: 14.04%;
+                         bottom: 26.05%;
+
+                         @include  policeStyle1();
+                         font-size: 24px;
+                         line-height: 100%;
+                         //or 24px 
+                         //height: 48px;
+                         //width: 217px;
+                         width: 82%;
+                         display: flex;
+                         align-items: flex-end;
+          
+                         color: #FFFFFF;
+                         z-index: 1;
+                    }
+                                            
+                    .kasa-home-body-section1_desk{
+                        opacity: 0;
+
+                         
+                    }
+                    .kasa-home-body-section1_mobile{
+                         display: unset;
+                         opacity: 1;
+                         object-fit: cover;
+                         
+                         
+                         .sectionimage{
+                              border-radius:10px;
+                              object-fit: cover;
+                              
+                         }
+                         img{
+                              opacity: 1;
+                              width: 100%;
+                              mix-blend-mode: darken;
+                              border-radius: 25px;
+                              transform: translate(1px, -204%);
+                              object-fit: cover;         
+                              }
+                    }          
+                    
+                    
+               
+               }    
+          
+               .kasa-home-body_gallery{
+               //section 2 = gallery
+                    position: absolute;
+                    max-width: 335px;
+                   width: 100%;
+                    height: 805px;
+               
+                    //left: 21px;
+                    top: 133px;
+                    left: 1px;
+                    background-color: #FFFFFF;
+                    
+               }
+          }
+     }    
 }
-@media screen and (min-width: 370px)and (max-width:375px){
+@media screen and (min-width: 371px)and (max-width:374px){
      .kasa-home {
           @include pageLengthmobile();
           width: 100%;
@@ -2234,7 +2326,7 @@
           }
      }    
 }     
-@media screen and (min-width: 361px)and (max-width:369px){
+@media screen and (min-width: 361px)and (max-width:370px){
      .kasa-home {
           @include pageLengthmobile();
           width: 100%;
