--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -23,7 +23,6 @@
           max-width: 340px;
                  
           border-radius: 10px;
-          background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
           text-align:left; 
           overflow: hidden;
          
@@ -34,6 +33,7 @@
               height: 100%;
               // height: auto;
               object-fit: cover;
+              background: #FF6060;
           }     
           
           h2{
@@ -42,6 +42,7 @@
                width: 300px;
                width: 99%;
                @include  policeStyle1();
+               //font-weight: bolder;
                font-size: 18px;
                margin-top: -62px;
                margin-left: 5%;
@@ -50,7 +51,16 @@
                display: flex;
                align-items: flex-end;
                color: #FFFFFF;
-          }     
+          } 
+          &:before {
+               content: '';
+               position: absolute;
+               top: 0;
+               left: 0;
+               width: 100%;
+               height: 100%;
+               background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+             }  
      }
 }
 @media screen and (min-width:2561px){
