--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -27,7 +27,7 @@
         position: absolute;
         left:66%;
         right: 0%;
-        top: 84%;
+        top: 18%;
         bottom: 25%;
         z-index: 1;
         display: flex;
@@ -38,10 +38,6 @@
             margin: 0 1px;
             position: relative;
 
-           // &:hover {
-           // text-decoration: underline;
-           // }
-
             &.active{           
             text-decoration: underline;
             }
@@ -51,6 +47,8 @@
             position: absolute;
             top: 25%;
             bottom: 25%;
+            width: 126px;
+            height: 34px;
 
             @include  policeStyle1();
             font-size: 24px;
@@ -61,10 +59,12 @@
         }
         .Apropos{
             position: absolute;
-           // left: 90.65%;
+            left: 73%;
             right: 0%;
             top: 25%;
             bottom: 25%;
+            width: 126px;
+            height: 34px;
 
             @include  policeStyle1();
             font-size: 24px;
@@ -180,6 +180,7 @@
                 right: 0%;
                 top: 25%;
                 bottom: 25%;
+                
     
                 @include  policeStyle1();
                 font-size: 26px;
@@ -226,11 +227,9 @@
         
         .kasa-header-nav nav{          
             position: absolute;
-            left: 63%;
-            //left: 137.21%;
+            left: 58%;
             right: 0%;
-            //top: 38.3%;
-            top: 52%;
+            top: 36%;
             bottom: 25.53%;
             height: 17px;
             width: 140px;
@@ -253,10 +252,11 @@
             .Accueil{
                 position: absolute;
                 left: -2%;
-                //right: 24.18%;
                 top: 38.3%;
                 bottom: 25.53%;
-
+                width: 71px;
+                height: 17px;
+                text-transform: uppercase;
                 @include  policeStyle1();
                 font-size: 12px;
                 display: flex;
@@ -268,12 +268,15 @@
             }
             .Apropos{
                 position: absolute;
-                //left: 78.81%;
+                left: 40%;
                 right: 0%;
-                top: 38.3%;
+                top: 40.3%;
                 bottom: 25.53%;
+                width: 71px;
+                height: 17px;
                 
                 @include  policeStyle1();
+                text-transform: uppercase;
                 font-size: 12px;
             
                 display: flex;
@@ -318,7 +321,7 @@
             //left: 137.21%;
             right: 0%;
             //top: 38.3%;
-            top: 52%;
+            top:30%;
             bottom: 25.53%;
             height: 17px;
             width: 140px;
@@ -344,8 +347,11 @@
                 //right: 24.18%;
                 top: 38.3%;
                 bottom: 25.53%;
+                width: 71px;
+                height: 17px;
 
                 @include  policeStyle1();
+                text-transform: uppercase;
                 font-size: 12px;
                 display: flex;
                 align-items: flex-end;
@@ -356,12 +362,15 @@
             }
             .Apropos{
                 position: absolute;
-                //left: 78.81%;
+                left: 33%;
                 right: 0%;
                 top: 38.3%;
                 bottom: 25.53%;
+                width: 71px;
+                height: 17px;
                 
                 @include  policeStyle1();
+                text-transform: uppercase;
                 font-size: 12px;
             
                 display: flex;
@@ -408,7 +417,7 @@
             //left: 137.21%;
             right: 0%;
             //top: 38.3%;
-            top: 52%;
+            top: 30%;
             bottom: 25.53%;
             height: 17px;
             width: 140px;
@@ -421,8 +430,11 @@
                 //right: 24.18%;
                 top: 38.3%;
                 bottom: 25.53%;
+                width: 71px;
+                height: 17px;
 
                 @include  policeStyle1();
+                text-transform: uppercase;
                 font-size: 12px;
             
                 display: flex;
@@ -434,12 +446,15 @@
             }
             .Apropos{
                 position: absolute;
-                //left: 78.81%;
+                left: 56%;
                 right: 0%;
                 top: 38.3%;
                 bottom: 25.53%;
+                width: 71px;
+                height: 17px;
         
                 @include  policeStyle1();
+                text-transform: uppercase;
                 font-size: 12px;    
                 display: flex;
                 align-items: flex-end;
@@ -542,7 +557,7 @@
             position: absolute;
             left: 48%;
             right: 1%;
-            top: 24%;
+            top: 15%;
             bottom: 10%;
             z-index: 1;
            
@@ -553,6 +568,8 @@
                 left: 45%;
                 @include  policeStyle1();
                 font-size: 24px;
+                width: 126px;
+                height: 34px;
              
     
                 display: flex;
@@ -563,10 +580,12 @@
             }
             .Apropos{
                 position: absolute;
-               // left: 90.65%;
+                left: 75%;
                 right: 0%;
                 top: 25%;
                 bottom: 25%;
+                width: 126px;
+                height: 34px;
     
                 @include  policeStyle1();
                 font-size: 24px;
@@ -646,7 +665,7 @@
         }
     }
   } 
-  @media screen and (min-width: 716px) and (max-width:768px){
+  @media screen and (min-width: 717px) and (max-width:768px){
     .kasa-header {
         position: absolute;
         width:90%;
@@ -675,7 +694,7 @@
             position: absolute;
             left: 55%;
             right: 0%;
-            top: 85%;
+            top: 35%;
             bottom: 25.53%;
             height: 17px;
             width: 140px;
@@ -686,6 +705,8 @@
                 left: 37%;
                 top: 38.3%;
                 bottom: 25.53%;
+                width: 126px;
+            height: 34px;
  
                 @include  policeStyle1();
                 font-size: 18px;
@@ -700,8 +721,11 @@
             .Apropos{
                 position: absolute;
                 right: 0%;
+                left: 70%;
                 top: 38.3%;
                 bottom: 25.53%;
+                width: 126px;
+                height: 34px;
                 
                 @include  policeStyle1();
                 font-size: 18px;
@@ -718,7 +742,7 @@
         }
     }
   }
-  @media screen and (min-width: 427px) and (max-width:715px){
+  @media screen and (min-width: 427px) and (max-width:716px){
     .kasa-header {
         position: absolute;
         width:96%;
@@ -748,11 +772,11 @@
         
         .kasa-header-nav nav{          
             position: absolute;
-            left: 56.21%;
+            left: 62%;
             //left: 137.21%;
             right: 0%;
             //top: 38.3%;
-            top: 52%;
+            top: 35%;
             bottom: 25.53%;
             height: 17px;
             width: 140px;
@@ -766,8 +790,11 @@
                 //right: 24.18%;
                 top: 38.3%;
                 bottom: 25.53%;
+                width: 71px;
+                height: 17px;
  
                 @include  policeStyle1();
+                text-transform: uppercase;
                 font-size: 12px;
                 
  
@@ -782,10 +809,13 @@
                 position: absolute;
                 //left: 78.81%;
                 right: 0%;
-                top: 38.3%;
+                top: 44%;
                 bottom: 25.53%;
+                width: 71px;
+                height: 17px;
                 
                 @include  policeStyle1();
+                text-transform: uppercase;
                 font-size: 12px;
             
                 display: flex;
@@ -832,11 +862,11 @@
        
        .kasa-header-nav nav{          
            position: absolute;
-           left: 62%;
+           left: 60%;
            //left: 137.21%;
            right: 0%;
            //top: 38.3%;
-           top: 52%;
+           top: 35%;
            bottom: 25.53%;
            height: 17px;
            width: 140px;
@@ -850,8 +880,11 @@
                //right: 24.18%;
                top: 38.3%;
                bottom: 25.53%;
+               width: 71px;
+               height: 17px;
 
                @include  policeStyle1();
+               text-transform: uppercase;
                font-size: 12px;
                
 
@@ -864,12 +897,15 @@
            }
            .Apropos{
                position: absolute;
-               //left: 78.81%;
+               left: 56%;
                right: 0%;
                top: 38.3%;
                bottom: 25.53%;
+               width: 71px;
+               height: 17px;
                
                @include  policeStyle1();
+               text-transform: uppercase;
                font-size: 12px;
            
                display: flex;
